apps/storage/redis/service.yaml
# Redis Insight service with name 'redisinsight-service'
apiVersion: v1
kind: Service
metadata:
  name: redis-master
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    app: redis
