apps/storage/redis/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redis-policy
  namespace: redis
spec:
  endpointSelector:
    matchLabels:
      "k8s:app": redis
  # ----=== Ingress ===----
  ingress:
    # === Allow access from Authelia ===
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "core"
            "k8s:app": "authelia"
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "core"
            "k8s:app": "oauth-proxy"
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "home"
            "k8s:app": "bar-assistant"
      toPorts:
        - ports:
            - port: "6379"
              protocol: "TCP"
